--- a/src/setting/DlgAdmin.form
+++ b/src/setting/DlgAdmin.form
@@ -24,7 +24,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-75,0,0,2,65"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-75,0,0,2,-74"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -160,7 +160,7 @@
           <Properties>
             <Property name="name" type="java.lang.String" value="panelGlass5" noResource="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[55, 55]"/>
+              <Dimension value="[675, 55]"/>
             </Property>
           </Properties>
           <Constraints>
@@ -180,11 +180,10 @@
                   <Image iconType="3" name="/picture/save-16x16.png"/>
                 </Property>
                 <Property name="mnemonic" type="int" value="83"/>
-                <Property name="text" type="java.lang.String" value="Simpan"/>
                 <Property name="toolTipText" type="java.lang.String" value="Alt+S"/>
                 <Property name="name" type="java.lang.String" value="BtnSimpan" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[100, 30]"/>
+                  <Dimension value="[50, 30]"/>
                 </Property>
               </Properties>
               <Events>
@@ -198,12 +197,11 @@
                   <Image iconType="3" name="/picture/Cancel-2-16x16.png"/>
                 </Property>
                 <Property name="mnemonic" type="int" value="66"/>
-                <Property name="text" type="java.lang.String" value="Baru"/>
                 <Property name="toolTipText" type="java.lang.String" value="Alt+B"/>
                 <Property name="iconTextGap" type="int" value="3"/>
                 <Property name="name" type="java.lang.String" value="BtnBatal" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[100, 30]"/>
+                  <Dimension value="[50, 30]"/>
                 </Property>
               </Properties>
               <Events>
@@ -217,12 +215,11 @@
                   <Image iconType="3" name="/picture/stop_f2.png"/>
                 </Property>
                 <Property name="mnemonic" type="int" value="72"/>
-                <Property name="text" type="java.lang.String" value="Hapus"/>
                 <Property name="toolTipText" type="java.lang.String" value="Alt+H"/>
                 <Property name="iconTextGap" type="int" value="3"/>
                 <Property name="name" type="java.lang.String" value="BtnHapus" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[100, 30]"/>
+                  <Dimension value="[50, 30]"/>
                 </Property>
               </Properties>
               <Events>
@@ -236,12 +233,11 @@
                   <Image iconType="3" name="/picture/inventaris.png"/>
                 </Property>
                 <Property name="mnemonic" type="int" value="71"/>
-                <Property name="text" type="java.lang.String" value="Ganti"/>
                 <Property name="toolTipText" type="java.lang.String" value="Alt+G"/>
                 <Property name="iconTextGap" type="int" value="3"/>
                 <Property name="name" type="java.lang.String" value="BtnEdit" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[100, 30]"/>
+                  <Dimension value="[50, 30]"/>
                 </Property>
               </Properties>
               <Events>
@@ -255,17 +251,35 @@
                   <Image iconType="3" name="/picture/exit.png"/>
                 </Property>
                 <Property name="mnemonic" type="int" value="75"/>
-                <Property name="text" type="java.lang.String" value="Keluar"/>
                 <Property name="toolTipText" type="java.lang.String" value="Alt+K"/>
                 <Property name="iconTextGap" type="int" value="3"/>
                 <Property name="name" type="java.lang.String" value="BtnKeluar" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[100, 30]"/>
+                  <Dimension value="[50, 30]"/>
                 </Property>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnKeluarActionPerformed"/>
                 <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="BtnKeluarKeyPressed"/>
+              </Events>
+            </Component>
+            <Component class="widget.Button" name="BtnPengumuman">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/picture/google-voice.png"/>
+                </Property>
+                <Property name="mnemonic" type="int" value="75"/>
+                <Property name="text" type="java.lang.String" value="Pengumuman"/>
+                <Property name="toolTipText" type="java.lang.String" value="Alt+K"/>
+                <Property name="iconTextGap" type="int" value="3"/>
+                <Property name="name" type="java.lang.String" value="BtnPengumuman" noResource="true"/>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[130, 30]"/>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnPengumumanActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="BtnPengumumanKeyPressed"/>
               </Events>
             </Component>
           </SubComponents>
