--- a/src/simrskhanza/frmUtama.form
+++ b/src/simrskhanza/frmUtama.form
@@ -488,7 +488,7 @@
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="1">
-            <StringItem index="0" value="27/01/2026"/>
+            <StringItem index="0" value="02/02/2026"/>
           </StringArray>
         </Property>
         <Property name="displayFormat" type="java.lang.String" value="dd/MM/yyyy"/>
@@ -9978,6 +9978,18 @@
               <Dimension value="[287, 23]"/>
             </Property>
           </Properties>
+        </Component>
+        <Component class="widget.Button" name="btnAktifitas">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/picture/2315911_bmp_documents_file_format_paper_icon.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Aktifitas"/>
+            <Property name="name" type="java.lang.String" value="btnAktifitas" noResource="true"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAktifitasActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
